<resources>

    <string name="app_name">DreamNarae</string>
    <string name="code_name">All New DreamNarae</string>
    <string name="app_id">190914181061582</string>
    <string name="noroottoast">The non-root mode in the applicable DreamNarae / delete disabled, but you can use all the other features.</string>
    <string name="quittitle">Quit</string>
    <string name="quitmessage">Do you quit DreamNarae?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="reboottitle">Reboot?</string>
    <string name="rebootmessage">Reboot your Device?</string>
    <string name="errortitle">Oops!</string>
    <string name="error2message">DreamNarae has not been applied properly. Please try again later.</string>
    <string name="infoclose">Close</string>
    <string name="noquittitle">Unavailable Quit!</string>
    <string name="noquitmessage">You cannot quit this screen :D</string>
    <string name="apply">Install</string>
    <string name="kakaotalkmessage">The wings on the phone! Just Use the Angeloid of works DreamNarae, and Experience the faster your device!</string>
    <string name="paypaldonate">Paypal Donate</string>
    <string name="thanksdonate">Thanks to Donate!</string>
    <string name="koreaaccount">Korea Account Donate(Account Holder : Dong Gil, Seo)</string>
    <string name="setting3_title">Send mail to us!</string>
    <string name="setting3_summary">Send Mail to Angeloid Team!</string>
    <string name="setting4_title">DreamNarae License</string>
    <string name="setting4_summary">Show DreamNarae License</string>
    <string name="license">License</string>
    <string name="go">Go</string>
    <string name="setwallpaper">Set Wallpaper</string>
    <string name="ishavekatok">Not installed KakaoTalk</string>
    <string name="progress_title">Downloading..</string>
    <string name="progress_detail">Please Wait for Downloading</string>
    <string name="boot_top">DreamNarae applied successfully!</string>
    <string name="boot_tickker">DreamNarae Boot Script</string>
    <string name="boot_bottom">Enjoy Your Device with DreamNarae!</string>
    <string name="isemailapp">Not installed Email-Application.</string>
    <string name="hidden1">Hidden Menu</string>
    <string name="wrongpw">Wrong Password</string>
    <string name="usepfm">Do you want Muiti Permission? Just Search Power File Manager in Play Store!</string>
    <string name="ttssetting">DreamNarae TTS</string>
    <string name="ttssetting_summary">Turn on DreamNarae TTS</string>
    <string name="ttssetting_is">Do you want DreamNarae TTS?(Can be turned off in Settings)</string>

    <!-- title -->
    <string name="main">Main</string>
    <string name="update">Update Log</string>
    <string name="spica">SPiCa</string>
    <string name="pure">Pure</string>
    <string name="save">Save</string>
    <string name="prev">Prev</string>
    <string name="miracle">Miracle</string>
    <string name="brand">Brand</string>
    <string name="spisave">SPiSave</string>
    <string name="delete">Delete</string>
    <string name="setting">Setting</string>
    <string name="developerinfo">Developer Info</string>
    <string name="donate">Donate</string>
    <string name="promoting">Promoting</string>
    <string name="cleaner">Cleaner</string>
    <string name="guide">Guide</string>
    <string name="ttsstore">TTS Store</string>

    <!-- Subtitle -->
    <string name="main_sub">Go to Main</string>
    <string name="update_sub">Check Update Log</string>
    <string name="spica_sub">"Version : 39's"</string>
    <string name="pure_sub">Version : 2.0</string>
    <string name="save_sub">Version : 4.0</string>
    <string name="prev_sub">Version : Final</string>
    <string name="miracle_sub">Version : Final</string>
    <string name="brand_sub">Version : Final</string>
    <string name="spisave_sub">Version : Final</string>
    <string name="delete_sub">Delete DreamNarae</string>
    <string name="setting_sub">Setting about DreamNarae</string>
    <string name="developerinfo_sub">See Developer Info</string>
    <string name="donate_sub">Donate to Angeloid, Dev</string>
    <string name="promoting_sub">Promoting to Friend</string>
    <string name="cleaner_sub">Clean system application</string>
    <string name="guide_sub">See DreamNarae Guide</string>
    <string name="ttsstore_sub">Purchase DreamNarae TTS Vocie!</string>

    <!-- Showcase -->
    <string name="tostart">To start DreamNarae..</string>
    <string name="tostartmessage">Slide to Right!</string>

    <!-- File Manager -->
    <string name="file_app_name">DreamNarae File Manager</string>
    <string name="Path">Location:</string>
    <string name="ParentFolder">Parent Folder</string>
    <string name="NoAppsToOpen">No Apps can open this file.</string>
    <string name="PressAgainToExit">Press again to exit.</string>
    <string name="Copy">Copy</string>
    <string name="Paste">Paste</string>
    <string name="Delete">Delete</string>
    <string name="Move">Move</string>
    <string name="Rename">Rename</string>
    <string name="Copying">Copying..</string>
    <string name="Moving">Moving..</string>
    <string name="Deleting">Deleting..</string>
    <string name="Wait">Please Wait.</string>
    <string name="FileAlreadyExists">The file with same name is already exists.</string>
    <string name="NowStartMultiSelectMode">Now start Multi-Selection Mode. Short/Long Click will select the item. Press Back to exit.</string>
    <string name="EndofMultiSelectMode">Finish Multi-Selection Mode.</string>
    <string name="newFolder">Make new Folder</string>
    <string name="newFolder_Hint">Name of New Folder</string>
    <string name="StartRenaming">Select Item.</string>
    <string name="Renaming">Renaming</string>
    <string name="Renaming_Hint">New Name</string>
    <string name="Finish">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="ChangeStorage">Change Storage</string>
    <string name="InternalStorage">Internal Storage</string>
    <string name="ExternalStorage">External SD Card</string>
    <string name="Unknown">Unknown</string>
    <string name="ShownDataCanIncorrect">Now Shown Internal/External Memory Division is just guess, So it can be incorrect data.</string>
    <string name="CannotGetStorageDataOnFroyo">Cannot get Internal/External Memory Division on Android 2.2 Froyo.</string>
    <string name="Search">Search</string>
    <string name="Search_Hint">Name of Searching File</string>
    <string name="Searching">Searching..</string>
    <string name="RequestBusybox">This app requires Busybox.</string>
    <string name="Perm">Change Permission</string>
    <string name="WillOpenTextEditor">This file seem a text file, so open this with my internal Text Editor.</string>
    <string name="SaveFile">Save</string>

    <!-- Cleaner -->
    <string name="listsystem">list</string>
    <string name="sizer_title">DreamNarae Cleaner</string>
    <string name="caution">Caution!</string>
    <string name="sizer_message_startup">This tool allows you to delete system apps. Use with caution and only delete apps you know are safe to be removed.\n\nThis tool has been original developed by SlimROM Team, all credits goes to them!</string>
    <string name="cancel">Cancel</string>
    <string name="sizer_message_delete">Are you sure you want to delete this app?</string>
    <string name="delete_success">Deleted</string>
    <string name="delete_fail">Unable to delete</string>
    <string name="sizer_message_sdnowrite">Cannot write to SD Card.</string>
    <string name="sizer_message_sdnoread">Cannot read SD Card.</string>
    <string name="sizer_message_filesuccess">Created profile.</string>
    <string name="sizer_message_filefail">Failed to create profile.</string>
    <string name="sizer_message_noselect">Nothing selected.</string>
    <string name="ok">OK</string>

    <!-- GuideBook -->
    <string name="guidebook_main">"Angeloid's new exclusive tweak system no longer work in older way, so we can boost high range smartphones like galaxy s4. 
        Each version pursue 6 usability (performance, stability, stand by time, actual using time, heavy work, light work). Generally, we edit or add build.prop, virtual memory, CPU with proper number and etc. 
        We are providing some dreamnarae tweaks which can make you to use your smartphones more comfortable and more enjoyable"</string>
        
    <!-- TableLayout -->
    <string name="subject_compare">Compare DN Tweak</string>
    <string name="version_name">Version</string>
    <string name="performance">Performance</string>
    <string name="battery_idle">Idle Battery</string>
    <string name="battery_use">Use Battery</string>
    <string name="stability">Stability</string>
    <string name="etc">Etc</string>
    <string name="score_1">1</string>
    <string name="score_2">2</string>
    <string name="score_3">3</string>
    <string name="score_4">4</string>
    <string name="score_5">5</string>
    <string name="Support_stop">Support Stop</string>
   
   <!-- TTS Store -->
   <string name="maid">Maid</string>
   <string name="friend">Friends</string>
   <string name="narae">Narae</string>
   <string name="alreadybuy">Already Buy!</string>
   <string name="soption">Standard Option</string>
   <string name="buy">Buy!</string>
   <string name="experience">Experience Voice</string>
   <string name="price">$1.00</string>
   <string name="phrase">Processing...</string>
</resources>