<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/setting_coner" >

        <LinearLayout
            android:layout_width="32.0dip"
            android:layout_height="32.0dip"
            android:layout_marginBottom="8.0dip"
            android:layout_marginLeft="12.0dip"
            android:layout_marginTop="8.0dip"
            android:background="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/tabtextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5.0dip"
            android:layout_marginTop="13.0dip"
            android:text="@string/setting"
            android:textColor="#000000"
            android:textSize="9pt" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1"
        android:onClick="mail" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting3_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView1"
            android:text="@string/setting3_summary" />
    </RelativeLayout>

    <View
        android:id="@+id/View03"
        android:layout_width="fill_parent"
        android:layout_height="2sp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/relativeLayout1"
        android:background="#CCCCCC" />

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/View03"
        android:onClick="licenseintent" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting4_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView3"
            android:text="@string/setting4_summary" />
    </RelativeLayout>

    <View
        android:id="@+id/View04"
        android:layout_width="fill_parent"
        android:layout_height="2sp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/relativeLayout2"
        android:background="#CCCCCC" />

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/View04" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ttssetting"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView5"
            android:text="@string/ttssetting_summary" />

    </RelativeLayout>
        <View
        android:id="@+id/View05"
        android:layout_width="fill_parent"
        android:layout_height="2sp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/relativeLayout3"
        android:background="#CCCCCC" />

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/View04" />
    
</RelativeLayout>