<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/tab_leaner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/file_coner" >

        <LinearLayout
            android:layout_width="32.0dip"
            android:layout_height="32.0dip"
            android:layout_marginBottom="8.0dip"
            android:layout_marginLeft="12.0dip"
            android:layout_marginTop="8.0dip"
            android:background="@drawable/file_launcher" />

        <TextView
            android:id="@+id/tabtextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5.0dip"
            android:layout_marginTop="13.0dip"
            android:text="@string/file_app_name"
            android:textColor="#000000"
            android:textSize="9pt" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/tab_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tab_leaner"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/RootMainLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/rpath"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="?android:attr/textColorPrimary"
                android:textIsSelectable="false" />

            <ListView
                android:id="@android:id/list"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom" >

            <TableRow>
                <Button
                    android:id="@+id/rPermBtn"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/file_coner"
                    android:onClick="onrPermBtnPress"
                    android:text="@string/Perm"
                    android:textSize="15sp" />
            </TableRow>

            <TableRow>
                <Button
                    android:id="@+id/rCopyBtn"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/file_coner"
                    android:onClick="onrCopyBtnPress"
                    android:text="@string/Copy"
                    android:textSize="15sp" />
                <Button
                    android:id="@+id/rPasteBtn"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/file_coner"
                    android:onClick="onrPasteBtnPress"
                    android:text="@string/Paste"
                    android:textSize="15sp" />
                <Button
                    android:id="@+id/rMoveBtn"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/file_coner"
                    android:onClick="onrMoveBtnPress"
                    android:text="@string/Move"
                    android:textSize="15sp" />
                <Button
                    android:id="@+id/rDeleteBtn"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/file_coner"
                    android:onClick="onrDeleteBtnPress"
                    android:text="@string/Delete"
                    android:textSize="15sp" />
            </TableRow>
        </TableLayout>
    </FrameLayout>

</RelativeLayout>